add log on redis exec
