# docs/swagger.yaml
@@ -168,6 +168,38 @@ paths:
       summary: Update a user profile by ID (admin only)
       tags:
       - Admin
+  /api/v1/chat/ws:
+    get:
+      description: Connects to WebSocket server for real-time messaging. Token must
+        be passed in query param. This is a WebSocket endpoint.
+      parameters:
+      - description: Access token
+        in: query
+        name: token
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "101":
+          description: WebSocket upgrade successful
+          schema:
+            type: string
+        "401":
+          description: Unauthorized
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: WebSocket chat connection
+      tags:
+      - chat
   /api/v1/login:
     post:
       consumes:
@@ -346,38 +378,6 @@ paths:
       summary: Logout user
       tags:
       - Authentication
-  /ws/chat:
-    get:
-      description: Connects to WebSocket server for real-time messaging. Token must
-        be passed in query param. This is a WebSocket endpoint.
-      parameters:
-      - description: Access token
-        in: query
-        name: token
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "101":
-          description: WebSocket upgrade successful
-          schema:
-            type: string
-        "401":
-          description: Unauthorized
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "500":
-          description: Internal Server Error
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-      summary: WebSocket chat connection
-      tags:
-      - chat
 securityDefinitions:
   BearerAuth:
     in: header
